<resources>
    <string name="app_name">Jump Judge</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="back">Back</string>
    <string name="zero">0</string>
    <string name="clear">Clear</string>
    <string name="rNumber">Rider Number</string>
    <string name="jumped_clear">Jumped Clear</string>
    <string name="refusal">Refusal</string>
    <string name="hold">Hold</string>
    <string name="clear_hold">Clear Hold</string>
    <string name="other">Other:</string>
    <string name="enter">Enter</string>
    <string name="fence_num">Fence: </string>
    <string name="division">Division:</string>
    <string name="settings">Settings</string>
    <string name="action_view_all_entries">View Entered Data</string>
    <string name="action_delete_all_entries">Delete Entered Data</string>
    <string name="action_download">Export Entered Data</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="empty_view_title_text">No Riders yet</string>
    <string name="empty_view_subtitle_text">Nope</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all riders?</string>
    <string name="editor_activity_title_edit_rider">Edit Rider</string>
    <string name="editor_insert_rider_failed">Insert Rider Failed</string>
    <string name="editor_insert_rider_success">Insert Rider Succeeded</string>
    <string name="editor_update_rider_failed">Update Rider Failed</string>
    <string name="editor_update_rider_success">Update Rider Succeeded</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved changes</string>
    <string name="discard">Discard Changes?</string>
    <string name="keep_editing">Keep Changes?</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this rider?</string>
    <string name="editor_delete_rider_failed">Edit Rider Failed</string>
    <string name="editor_delete_rider_success">Edit Rider Succeeded</string>
    <string name="export_all_msg">Are you sure you want to export the data?\n
                                The show should be over when you do this</string>
    <string name="export">Export</string>
    <string name="cannot_delete_file_msg">The export file already exists for today. \n
                                        Please delete it manually if necessary.</string>
    <string name="ok">OK</string>
    <string name="uninstall_msg">Are you sure you want to uninstall this app?\n
                                 The show should be over and the data no longer needed before you do this.\n
                                 Data that has been exported will not be deleted.</string>
    <string name="uninstall">Uninstall</string>


    <string-array name="array_other_options">
        <item>None</item>
        <item>Withdraw</item>
        <item>Rider Fall</item>
        <item>Horse Fall</item>
        <item>Technical Elimination</item>
        <item>Flag Fault</item>
        <item>Frangible Pin</item>
    </string-array>
</resources>
